--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Media queries</title>
-		<link href="styles.css" rel="stylesheet">
+		<title>Name</title>
 	</head>
 	<body>
 
-		<h1>Home</h1>
-		<a href="subpage/index.html">Down a page</a>
+		<!-- layout goes here -->
 
 	</body>
 </html>
