add project template

--- a/code-snippets/index.html
+++ b/code-snippets/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Name</title>
-		<link href="styles.css" rel="stylesheet">
+		<title>Title</title>
+		<link href="_assets/styles.css" rel="stylesheet">
 	</head>
 	<body>
 
 		<!-- layout goes here -->
 
+		<script src="_assets/scripts.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	</body>
 </html>
