--- a/project-template/index.html
+++ b/project-template/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Name</title>
-		<link href="styles.css" rel="stylesheet">
+		<link href="_assets/styles.css" rel="stylesheet">
+    <script src="_assets/scripts.js"></script>
 	</head>
 	<body>
 
