--- a/code-snippets/index.html
+++ b/code-snippets/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Title</title>
-		<link href="_assets/styles.css" rel="stylesheet">
+		<link href="" rel="stylesheet">
 	</head>
 	<body>
 
 		<!-- layout goes here -->
 
-		<script src="_assets/scripts.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src=""></script>
 	</body>
 </html>
